fixed image overflow

--- a/src/components/stats/stats.css
+++ b/src/components/stats/stats.css
@@ -14,6 +14,7 @@
 
 .vercel__card {
     border-radius: 0 0 2rem 2rem;
+    overflow: hidden;
 }
 
 .stat:hover {
